--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,5 @@
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/society-ease
-# or MongoDB Atlas URI: mongodb+srv://username:password@cluster.mongodb.net/society-ease
+MONGODB_URI="your mongodb-uri-here"
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
